--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
     "vue-awesome": "^4.1.0",
+    "vue-router": "^3.4.9",
     "vue-toasted": "^1.1.28"
   },
   "devDependencies": {
