--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "animejs": "^3.2.1",
+    "connect-history-api-fallback": "^1.6.0",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
     "vue-awesome": "^4.1.0",
